prometheus_collection_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: prometheus_collection_network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/prometheus_collection_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/prometheus_collection_network: "true"
